# minidecaf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
grammar/: CommonLex.g4  MiniDecaf.g4
src/: IRVisitor.cpp  IRVisitor.h  StackIRVisitor.cpp  StackIRVisitor.h  Visitor.cpp  Visitor.h  main.cpp  util.h
